--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,6 @@
-
-<div class="container animate__animated animate__bounce animate__delay-2s">
-  <div class="mt-5 ml-5">
+<!-- animate__animated animate__bounce animate__delay-2s mt-5 -->
+<div class="container mt-5">
     <router-outlet></router-outlet>
-    <button class="btn btn-success">Boton</button>
-    <i class="fa-solid fa-cat" style="color: #32f718;"></i>
-    <h1 class="animate__animated animate__fadeInLeft">An animated element</h1>
-  </div>
 </div>
 
 
