--- a/src/app/pages/heroes/heroes.component.html
+++ b/src/app/pages/heroes/heroes.component.html
@@ -1,5 +1,45 @@
-<h1>Listado de tareas</h1>
+<div class="container">
+    <h1 class="animate__heartBeat">Listado de tareas</h1>
+    <hr>
+    <table class="table table-dark table-striped">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Color</th>
+                <th scope="col">Vivo</th>
+                <th scope="col">Herramienta</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
+            </tr>
+        </tbody>
+    </table>
 
-<div class="row">
-    <div class="col"></div>
+
+    <div class="alert alert-warning mt-3 text-center" role="alert">
+        <h4 class="alert-heading">No hay registros!</h4>
+        <i class="fa fa-exclamation"></i>
+    </div>
+
+    <div class="alert alert-success mt-3 text-center" role="alert">
+        <h4 font-align="font-align:center" class="alert-heading">Cargando!</h4>
+        <div class="spinner-border text-success" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+
+
+
+    <button class="btn btn-success">
+        <div class="i fa fa-plus"></div>
+        Agregar
+    </button>
+    <i class="fa-solid fa-cat" style="color: #32f718;"></i>
 </div>
